fix(ui-ux): fix to use overflow hidden instead of overflow clip as clip might not be supported (#587)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,7 +14,6 @@
 @tailwind utilities;
 
 body {
-  overflow-x: clip;
   width: 100%;
   box-sizing: border-box;
 }
